Bug 914175 - Reply error when no profile is connected, r=echou