dom/bluetooth/BluetoothProfileManagerBase.h
@@ -14,6 +14,8 @@
  */
 #define ERR_ALREADY_CONNECTED           "AlreadyConnectedError"
 #define ERR_ALREADY_DISCONNECTED        "AlreadyDisconnectedError"
+#define ERR_CONNECTION_FAILED           "ConnectionFailedError"
+#define ERR_DISCONNECTION_FAILED        "DisconnectionFailedError"
 #define ERR_NO_AVAILABLE_RESOURCE       "NoAvailableResourceError"
 #define ERR_REACHED_CONNECTION_LIMIT    "ReachedConnectionLimitError"
 #define ERR_SERVICE_CHANNEL_NOT_FOUND   "DeviceChannelRetrievalError"
